# scan

./: .gitignore  AGENTS.md  BRIEFING_D2.md  CHANGELOG.md  CLAUDE.md  DEMO.md  DEV_NOTES.md  PROMPT_D1.md  README.md  REPORT_D1.md  REPORT_D2.md  ROADMAP.md  Supplier Hub.html  WORK_STATUS.md  app-demo-release.apk  chomiseven1_sku_download_20260327174844.xlsx  sku_category_mapping.xlsx  바코드 스캐너 시스템 — 이은석.html  이은석_개발자_이력서.html
server/: .env.example  deploy.bat  pyproject.toml  requirements.txt  scanner-backup.service  scanner-backup.timer  scanner-server.service
server/app/: config.py  main.py
server/app/api/: map_routes.py  routes.py  shelf_routes.py  warehouse_routes.py
server/app/db/: database.py  migrate_map.py  schema.py  seed.py
server/app/middleware/: auth.py
server/app/models/: schemas.py
server/app/services/: box_service.py  cart_service.py  codepath_parser.py  favorite_service.py  file_watcher.py  history_service.py  image_service.py  inbound_service.py  inventory_service.py  map_layout_service.py  nas_sync.py  outbound_service.py  parse_cli.py  print_log_service.py  print_service.py  product_service.py  scan_log_service.py  shelf_service.py  sku_parser.py  status_service.py  (+4 more)
server/data/: scanner.db-shm  scanner.db-wal
server/docs/: API_SPEC.md  ARCHITECTURE.md  DATABASE.md  OPERATION_GUIDE.md  PARSER_SPEC.md
server/scripts/: analyze_sku_matching.py  simulate_hybrid_split.py
server/static/: map-editor.html
server/tests/: conftest.py  test_api.py  test_backup.py  test_doc_consistency.py  test_image_resize.py  test_map_layout.py  test_stock.py
(+241 files in other folders)
